[package]
name = "auction-smart-contract"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-std = {version = "*", default-features = false}
concordium-cis2 = {version = "*", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]
