[package]
name = "cis2-nft"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-std = {git = "https://github.com/Concordium/concordium-rust-smart-contracts", default-features = false}
concordium-cis2 = {git = "https://github.com/Concordium/concordium-rust-smart-contracts", default-features = false}
hex = "*"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
